--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,3 @@
-/* =================================================================== 
- *
- *  Epitome Main Stylesheet
- *  Template Ver. 1.0.0
- *  04-22-2019
- *  ------------------------------------------------------------------
- *
- *  TOC:
- *  # base style overrides
- *     ## links
- *  # typography & general theme styles
- *    ## Lists
- *    ## responsive video container
- *    ## floated image
- *    ## tables
- *    ## Spacing 
- *    ## pace.js styles - minimal
- *  # preloader
- *  # forms 
- *    ## Style Placeholder Text
- *    ## Change Autocomplete styles in Chrome
- *  # buttons
- *  # additional components
- *    ## additional typo styles 
- *    ## skillbars
- *    ## alert box 
- *    ## pagination 
- *  # Common and Reusable Styles
- *  # header 
- *    ## header logo
- *    ## main navigation
- *    ## menu trigger
- *  # intro 
- *  # about
- *    ## timeline
- *  # services
- *  # CTA
- *  # works
- *  # testimonials
- *  # contact
- *  # footer
- *    ## copyright
- *    ## go to top
- *  # IE10/IE11 Specific
- *
- * =================================================================== */
-
-
-
-/* ===================================================================
- * # base style overrides
- *
- * ------------------------------------------------------------------- */
 html {
   font-size: 10px;
 }
@@ -1591,14 +1538,15 @@ input::-moz-focus-inner {
  * # header 
  *
  * ------------------------------------------------------------------- */
-.s-header {
+ .s-header {
   position: absolute;
-  top: 2rem;
+  top: 0;
   left: 0;
   width: 100%;
   height: 78px;
   text-align: center;
   z-index: 100;
+  box-shadow: 0 4px 8px rgba(255, 209, 26, 0.6);
 }
 
 .s-header.sticky {
@@ -1606,6 +1554,15 @@ input::-moz-focus-inner {
   position: fixed;
   top: 0;
   left: 0;
+}
+
+@keyframes pull {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+
+#stickman.pull {
+  animation: pull 0.5s ease infinite alternate;
 }
 
 /* -------------------------------------------------------------------
@@ -1917,7 +1874,7 @@ input::-moz-focus-inner {
 .intro-content {
   height: 100%;
   max-width: 1140px;
-  padding-top: 20vh;
+  padding-top: 0vh;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
@@ -1932,7 +1889,7 @@ input::-moz-focus-inner {
   box-shadow: 10px 0 200px 50px black inset;
   background-size: cover;
   position: absolute;
-  top: 20%;
+  top: 0%;
   right: 0%;
   bottom: 0%;
   left: 50%;
@@ -1954,15 +1911,14 @@ input::-moz-focus-inner {
   background-size: 24px 80px;
   opacity: .15;
   position: absolute;
-  top: 30%;
+  top: 10%;
   right: 0;
   bottom: 0;
   left: 30%;
 }
 
 .intro-text {
-  -webkit-transform: translate3d(0, -3.6rem, 0);
-  transform: translate3d(0, -3.6rem, 0);
+  transform: translate3d(0, -6rem, 0); /* Move it higher */
   position: static;
   z-index: 1;
 }
@@ -1993,10 +1949,7 @@ input::-moz-focus-inner {
   line-height: 2;
   text-transform: uppercase;
   letter-spacing: .3rem;
-  position: absolute;
-  bottom: 8rem;
-  left: 24px;
-  z-index: 1;
+  margin-top: 20px; /* Space between image and link */
 }
 
 .intro-scroll a {
@@ -2084,7 +2037,7 @@ input::-moz-focus-inner {
   }
 
   .intro-grid {
-    top: 20%;
+    top: 0%;
     opacity: .1;
   }
 
@@ -2164,6 +2117,14 @@ input::-moz-focus-inner {
 
 }
 
+#changing-image {
+  display: block;
+  /* margin: 20px auto; */
+  max-width: 100%;
+  height: auto;
+  width: 150px; /* Adjust based on your design */
+}
+
 
 
 /* ===================================================================
@@ -2171,7 +2132,7 @@ input::-moz-focus-inner {
  *
  * ------------------------------------------------------------------- */
 .s-about {
-  padding-top: 19.2rem;
+  padding-top: 10.2rem;
   padding-bottom: 16.8rem;
   background-color: #ffffff;
 }
