--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,7 @@
     position: absolute;
     height: 80vh;
     width: 90%;
-    background-image: url(img/circle.png);
+    background-image: url(img/yellow-circle.png);
     background-position: center;
     background-size: cover;
     animation: rotate 10s linear infinite;
