--- a/styles.css
+++ b/styles.css
@@ -12,114 +12,19 @@
     src: url('/fonts/04B_30__.TTF') format('truetype');
 }
 
-.image1{ 
-    position: relative;
-    height: auto;
-    width: 64px;
-    background-image: url(img/face-button.png);
-    background-size: cover;
+@font-face {
+    font-family: 'academy';
+    font-weight: bold;
+    font-style: normal;
+    src: url('/fonts/AcademyFilled3D.ttf') format('truetype');
 }
 
-.image2 {
-    position: absolute;
-    height: 80vh;
-    width: 90%;
-    background-image: url(img/yellow-circle.png);
-    background-position: center;
-    background-size: cover;
-    animation: rotate 10s linear infinite;
+@font-face {
+    font-family: 'doergon';
+    font-weight: bold;
+    font-style: normal;
+    src: url('/fonts/DoergonShift.ttf') format('truetype');
 }
-
-.image3 {
-    position: absolute;
-    background-image: url(img/circle2.png);
-    background-position: center;
-    background-size: cover;
-    animation: rotate-counter 10s linear infinite;
-}
-
-.image4 {
-    position: absolute;
-    background-image: url(img/face-button.png);
-    background-position: center;
-    background-size: cover;
-    animation: rotate 1s linear infinite;
-}
-
-.floating {
-    position: absolute;
-    width: 100px; 
-    height: auto;
-    pointer-events: none; 
-    z-index: -1;
-}
-
-@keyframes float {
-    0% {
-        transform: translateY(0px);
-    }
-    50% {
-        transform: translateY(-10px); /* Adjust the float height */
-    }
-    100% {
-        transform: translateY(0px);
-    }
-}
-
-@keyframes rotate {
-    from {
-        transform: translate(-50%, -50%) rotate(0deg);
-    }
-    to {
-        transform: translate(-50%, -50%) rotate(360deg);
-    }
-}
-
-button::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0;
-    height: 0;
-    /* background: radial-gradient(circle, rgb(255, 255, 255) 0%, rgb(255, 0, 255) 40%, rgb(128, 0, 128) 70%, rgba(0, 0, 0, 0.7) 100%); */
-    background-image: url(img/black-hole.svg);
-    border-radius: 50%;
-    transform: translate(-50%, -50%);
-    transition: width 3s ease, height 3s ease;
-    z-index: -1; 
-    opacity: 1;
-}
-
-button.expand::before {
-    width: 28.5vw;
-    height: 60vh;
-    animation: rotate 5s linear infinite; 
-}
-
-.trail {
-    position: fixed;
-    width: 20px;
-    height: 20px;
-    background: rgb(234, 208, 7);
-    border-radius: 50%;
-    pointer-events: none;
-    z-index: 999;
-    opacity: 0;
-    animation: fade 1s ease-out forwards;
-}
-
-@keyframes fade {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-        transform: scale(0);
-    }
-}
-
-
 
 
 
