--- a/button-style.css
+++ b/button-style.css
@@ -1,6 +1,41 @@
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
 
+@font-face {
+  font-family: 'square';
+  font-weight: normal;
+  font-style: normal;
+  src: url('/fonts/upheavtt.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'pixel';
+  font-weight: bold;
+  font-style: normal;
+  src: url('/fonts/04B_30__.TTF') format('truetype');
+}
+
+@font-face {
+  font-family: 'academy';
+  font-weight: bold;
+  font-style: normal;
+  src: url('/fonts/AcademyFilled3D.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'doergon';
+  font-weight: bold;
+  font-style: normal;
+  src: url('/fonts/DoergonShift.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'actionj';
+  font-weight: bold;
+  font-style: normal;
+  src: url('/fonts/actionj.ttf') format('truetype');
+}
+
 /*=============== VARIABLES CSS ===============*/
 :root {
   /*========== Colors ==========*/
