--- a/contribution.css
+++ b/contribution.css
@@ -115,6 +115,13 @@
     position: relative;
 }
 
+@media (max-width: 1000px) {
+  .day {
+    width: 12px;
+    height: 12px;
+  }
+}
+
 .day:hover {
     transform: scale(1.3);
     z-index: 10;
@@ -330,11 +337,6 @@ button:hover {
     .days-labels {
         font-size: 10px;
         min-width: 25px;
-    }
-    
-    .day {
-        width: 10px;
-        height: 10px;
     }
     
     .controls {
