--- a/button-style.css
+++ b/button-style.css
@@ -45,6 +45,14 @@ a {
   -webkit-text-stroke-color: #000000; /* amber-500 */
 }
 
+.image-stroke {
+  filter: drop-shadow(0 0 0px #000000) /* no shadow */
+          drop-shadow(2px 0 0 #000000) /* position to the right */
+          drop-shadow(-25px 0 0 #f59e0b) /* position to the left */
+          drop-shadow(0 2px 0 #000000) /* position below */
+          drop-shadow(0 -2px 0 #000000); /* position above */
+}
+
 
 
 
